modules/gdscript/tests/scripts/parser/errors/lambda_no_continue_on_new_line.gd
# https://github.com/godotengine/godot/issues/73273

func not_called():
    var v
    v=func(): v=1
    in v
